Fix overlapping styles

--- a/src/components/Home/Tasks/Filter/Filter.styles.scss
+++ b/src/components/Home/Tasks/Filter/Filter.styles.scss
@@ -26,8 +26,9 @@
     }
     &__sortByDate {
       font-size: 1.5rem;
-      width: 100%;
+      width: 30%;
       text-align: end;
+      margin-left: auto;
       position: relative;
       top: 4rem;
       @media screen and (max-width: 831px) {
